--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -59,3 +59,10 @@
 #dropdown-sort button svg {
     font-size: 14pt;
 }
+.no-nft {
+    font-size: 1.25rem;
+    /* text-align: center; */
+    color: white;
+    font-weight: bold;
+    margin: auto;
+}
