--- a/src/Pages/Market.css
+++ b/src/Pages/Market.css
@@ -1,14 +1,20 @@
 .categoryName {
     color: #E7E6E6;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 4%;
+    margin-left: -100%;
+    margin-bottom: 0%;
     /* margin-bottom: 20px; */
-    display: inline;
+    /* display: inline; */
 }
-
 .noItems {
-    margin-left: 40px;
     color: #E7E6E699;
-    display: inline;
+    margin-left: 81%;
+    margin-bottom: 3%;
+    font-weight: bolder;
     /* margin-top: 20px; */
+}
+.categoryHeading{
+    color:white; 
+    text-align: center;
+    margin-top: 5%;
 }
