--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -36,7 +36,7 @@
 }
 a#collasible-nav-dropdown {
     color: white;
-    margin-top: 5% !important;
+    margin-top: 8% !important;
     margin-right: 5% !important;
 }
 
@@ -76,7 +76,7 @@ a#collasible-nav-dropdown {
 
 .brand-logo {
     display: inline-flex !important;
-    width: 50px;
+    width: 4rem;
 }
 
 .color-nav {
@@ -85,4 +85,33 @@ a#collasible-nav-dropdown {
 
 .nav-link {
     color: white;
+}
+.headNav{
+    color:white;
+    margin-top:2%;
+    margin-right:1rem;
+    font-size: 1.3rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.headNav:hover{
+    color:rgba(255, 255, 255, 0.897);
+}
+#about{
+    margin-left:3rem;
+}
+nav.color-nav.navbar.navbar-expand.navbar-light {
+    position: sticky;
+    top: 0;
+    z-index: 400;
+    background-color: #551266;
+}
+svg.account-icon {
+    color: white;
+    font-weight: 1;
+    margin-right: 27%;
+}
+
+.mr-auto.Nav-align.navbar-nav {
+    margin: auto;
+    margin-bottom: 1rem;
 }
